--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,11 @@
   "version": 2,
   "builds": [
     { "src": "api/index.ts", "use": "@vercel/node" },
-    { "src": "package.json", "use": "@vercel/static-build" }
+    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
   ],
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/index.ts" },
-    { "src": "^(?!/api).*", "dest": "/" }
+    { "src": "/api/(.*)", "dest": "/api/index.ts" },
+    { "handle": "filesystem" },           
+    { "src": "/(.*)", "dest": "/" }       
   ]
 }
